--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -1,9 +1,12 @@
 \input{./content/preamble}
 \begin{document}
 \include{./content/forside}
+
 \cleardoublepage
+\todo[inline]{Sidetal skal ordnes....}
+\pagenumbering{Roman}
+\setcounter{page}{1}
 \include{./content/ansvarsomraader}
-\cleardoublepage
 \include{./content/indholdsfortegnelse}
 \pagestyle{fancy}
 \fancyfoot{}
