--- a/Rapport/content/forside.tex
+++ b/Rapport/content/forside.tex
@@ -1,11 +1,10 @@
-\title{POLE POSITION \\ DAT2, Robotteknologi 2. semesterprojekt}
-\author{Gruppe 1 \\ Mikael, Mikkel, Nikolaj, Lars \& Anders}
-\date{Maj 2013}
+\title{POLE POSITION?????? \\ DAT2?????????, Robotteknologi 4. semesterprojekt}
+\author{Gruppe 1 \\ Åse, Mikael, Mikkel, Nikolaj, Michael \& Anders}
+\date{Maj 2014}
 \begin{figure}
 \centering
 \includegraphics[width=1\textwidth]{graphics/forside.png}
 \end{figure}
 \maketitle
-
 
 
