--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -6,6 +6,9 @@
 \todo[inline]{Sidetal skal ordnes....}
 \pagenumbering{Roman}
 \setcounter{page}{1}
+
+\include{./content/figurertabellerligninger} % Bruges til de forskellige formalia......
+
 \include{./content/ansvarsomraader}
 \include{./content/indholdsfortegnelse}
 \pagestyle{fancy}
@@ -17,7 +20,6 @@
 %%%%%%%%% RAPPORTENS AFSNIT BEGYNDER!!!
 \include*{./content/forord}
 \include{./content/indledning}
-
 \include{./content/problemformulering}
 
 
