Nu er det klar til at skrive i rapporten. Jeg glæder mig til at snakke med jer omkring det midlertidige opsætning glæder mig til at høre jeres mening. Anders

--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -7,8 +7,8 @@
 \pagenumbering{Roman}
 \setcounter{page}{1}
 
-\include{./content/figurertabellerligninger} % Bruges til de forskellige formalia......
 
+\include{./content/templates} % Kan bruges til copy paste ind i rapport for forskellige outputs.....
 \include{./content/ansvarsomraader}
 \include{./content/indholdsfortegnelse}
 \pagestyle{fancy}
@@ -17,10 +17,10 @@
 \fancyfoot[LO,CE]{}
 \fancyfoot[CO,RE]{}
 
-%%%%%%%%% RAPPORTENS AFSNIT BEGYNDER!!!
-\include*{./content/forord}
+%%%%%%%%% RAPPORTENS KAPTILER BEGYNDER!!!
+\include{./content/forord}
 \include{./content/indledning}
-\include{./content/problemformulering}
+
 
 
 
