--- a/Rapport/content/forside.tex
+++ b/Rapport/content/forside.tex
@@ -1,5 +1,5 @@
-\title{POLE POSITION?????? \\ DAT2?????????, Robotteknologi 4. semesterprojekt}
-\author{Gruppe 1 \\ Åse, Mikael, Mikkel, Nikolaj, Michael \& Anders}
+\title{Styring og regulering af et Pan og Tilt system \\Robotteknologi 4. semesterprojekt}
+\author{Gruppe 2 \\ Åse, Mikael, Mikkel, Nikolaj, Michael \& Anders}
 \date{Maj 2014}
 \begin{figure}
 \centering
