--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -1,12 +1,10 @@
 \documentclass[11pt,twoside,a4paper,titlepage]{article}
-%\usepackage{csvsimple}  Denne giver fejl "\trimspace already defined"
+%%%%%%% Standart settings %%%%%%%
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage[nottoc, numbib, notlot, notlof]{tocbibind}
 \usepackage{fancyhdr}
-\usepackage{graphicx}
 \usepackage[utf8]{inputenc} 
-\usepackage{lastpage}
 \usepackage[margin=2.5cm]{geometry}
 \usepackage{mathtools}
 \usepackage[danish]{babel}
@@ -14,7 +12,6 @@
 \usepackage{newclude}
 \usepackage{siunitx}
 \usepackage{booktabs}
-\usepackage{caption}
 \usepackage{subfig}
 \usepackage{wrapfig} 
 \usepackage[subfigure]{tocloft}
@@ -25,44 +22,52 @@
 \usepackage{tabularx}
 \setlength{\headheight}{15pt}
 \usepackage{filecontents}
-\reversemarginpar
-%\bibliographystyle{plain}
+\usepackage{longtable}
+\usepackage{footnote}
+\setcounter{tocdepth}{3} % Antal lag i indholdsfortegenlse.
+\setcounter{secnumdepth}{5} % Antal lag i sektioner.
 
+%%%%%%% FIGURES %%%%%%%
 \usetikzlibrary{positioning} % in the preamble
 \usetikzlibrary{decorations.pathreplacing}
 \usetikzlibrary{arrows,shapes}
-\usepackage{longtable}
-\usepackage{footnote}
-%\usepackage{tablefootnote}
-
-
-
-
 \usepackage{tikz-timing}
 \usepackage{graphics}
 \usepackage{siunitx}
 \usepackage{tikz}
 \usetikzlibrary{shapes,arrows,chains, scopes}
 \usepackage{pgfplots}               
-%\pgfplotsset{compat=1.8}           Ikke i brug
-\usepackage[%
-  europeanvoltages,
-  europeancurrents,
-  europeanresistors,
-  americaninductors,
-  smartlabels]{circuitikz}
+\usepackage[europeanvoltages, europeancurrents, europeanresistors, americaninductors, smartlabels]{circuitikz}
+\usepackage{graphicx} % bruges til MATLAB figurer samt formatet .eps
+\usepackage{mathtools}
+\usetikzlibrary{arrows,automata} % for drawing state machines
 
-
-\setcounter{tocdepth}{3} % Antal lag i indholdsfortegenlse.
-
-\AtBeginDocument{\addtocontents{toc}{\protect\thispagestyle{empty}}} 
-\AtBeginDocument{\addtocontents{lof}{\protect\thispagestyle{empty}}} 
-\AtBeginDocument{\addtocontents{lot}{\protect\thispagestyle{empty}}} 
-%\pagestyle{empty}
-
-% caption størrelse
+%%%%%%% captions settings %%%%%%%
+\usepackage{caption}
 \captionsetup{font=footnotesize}
 
+%%%%%%% implementering af code %%%%%%%
+\usepackage{listings}
+\lstset{frame=tb,
+tabsize=4,
+language=C,
+captionpos=b,
+tabsize=3,
+frame=false,
+numbers=left,
+numberstyle=\tiny,
+numbersep=5pt,
+breaklines=true,
+showstringspaces=false,
+basicstyle=\ttfamily,
+% identifierstyle=\color{magenta},
+keywordstyle=\color[rgb]{0,0,1},
+commentstyle=\color{ForestGreen}\ttfamily,
+morecomment=[l][\color{brown}]{\#},
+stringstyle=\color{red}
+}
+
+%%%%%%% Diverse %%%%%%%
 \usepackage{pdfpages}
 \usepackage[pdftex,
  hyperfigures=true,
@@ -75,7 +80,6 @@
  pdfpagelabels,
  unicode]{hyperref}
  
-
 \newenvironment{changemargin}[2]{%
 \begin{list}{}{%
 \setlength{\topsep}{0pt}%
@@ -86,54 +90,3 @@
 \setlength{\parsep}{\parskip}%
 }%
 \item[]}{\end{list}}
-
-\setcounter{secnumdepth}{5}
-
-
-%tegne figurer
-
-\usepackage{graphicx} % den skal bruges til MATLAB figurer og formatet er: .eps
-\usepackage{mathtools}
-
-\usepackage{tikz-timing}
-\usepackage{graphics}
-\usepackage{siunitx}
-\usepackage{tikz}
-\usetikzlibrary{shapes,arrows,chains, scopes}
-
-
-
-
-
-
-
-%% kode
-
-\usepackage{listings}
-\usepackage{color}
-
-\definecolor{dkgreen}{rgb}{0,0.6,0}
-\definecolor{gray}{rgb}{0.5,0.5,0.5}
-\definecolor{mauve}{rgb}{0.58,0,0.82}
-
-\lstset{frame=tb,
-tabsize=4,
-  language=C++,
-  captionpos=b,
-  tabsize=3,
-  frame=false,
-  numbers=left,
-  numberstyle=\tiny,
-  numbersep=5pt,
-  breaklines=true,
-  showstringspaces=false,
-  basicstyle=\ttfamily,
-%  identifierstyle=\color{magenta},
-  keywordstyle=\color[rgb]{0,0,1},
-   commentstyle=\color{ForestGreen}\ttfamily,
-                morecomment=[l][\color{magenta}]{\#},
-  stringstyle=\color{red}
-}
-
-
-
