Lidt updates.. bibtex med eksempler osv..

--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -43,6 +43,10 @@
 \usetikzlibrary{arrows,automata} % for drawing state machines
 
 %%%%%%% captions settings %%%%%%%
+\usepackage[round]{natbib}
+\bibliographystyle{plainnat}
+
+%%%%%%% captions settings %%%%%%%
 \usepackage{caption}
 \captionsetup{font=footnotesize}
 
@@ -68,6 +72,7 @@ stringstyle=\color{red}
 }
 
 %%%%%%% Diverse %%%%%%%
+\usepackage{icomma}
 \usepackage{pdfpages}
 \usepackage[pdftex,
  hyperfigures=true,
