--- a/Rapport/content/templates.tex
+++ b/Rapport/content/templates.tex
@@ -14,12 +14,26 @@
 %\item punkt
 %\end{itemize}
 
+%%%%%%%%%%%% REFERENCE %%%%%%%%%%%%
+%\citep[Side. ]{reflist}
+
+%%%%%%%%%%%% TODO %%%%%%%%%%%%
+%\todo[inline,color=red! 100]{grammatik}
+%\todo[inline,color=green! 100]{hjælp, henvisning til person}
+%\todo[inline,color=yellow! 100]{person, mangler ydereligere oplysninger}
+%\todo[inline,color=blue! 50]{person, vil gerne have feedback}
+%\todo[inline,color=gray! 100]{diverse}
 
 %%%%%%%%%%%% LIGNINGER %%%%%%%%%%%%
+% Notation: 1.000,5
 %\begin{equation}
 
 %\label{eq:} 
 %\end{equation}
+
+
+% \(math\) normal
+% \[math\] centering
 
 %%%%%%%%%%%% FIGURER %%%%%%%%%%%%
 %\begin{figure}[th!]
