--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -20,11 +20,21 @@
 %%%%%%%%% RAPPORTENS KAPTILER BEGYNDER!!!
 \include{./content/forord}
 \include{./content/indledning}
+%%%%%%%%%%%% PART 1 %%%%%%%%%%%%
+
+%%%%%%%%%%%% PART 2 %%%%%%%%%%%%
+
+%%%%%%%%%%%% PART 3 %%%%%%%%%%%%
 
 
 
 
-
+%%%%%%%%%%%% Litteratur %%%%%%%%%%%%
+\include{./content/litteratur}
+%%%%%%%%%%%% Appendix %%%%%%%%%%%%
+\include{./content/appendix}
+%%%%%%%%%%%% Bilag %%%%%%%%%%%%
+\include{./content/bilag}
 
 
 
