tilføjet pdf til gitignore..

--- a/IEEE rapport/IEEE master/content/preamble.tex
+++ b/IEEE rapport/IEEE master/content/preamble.tex
@@ -1,4 +1,4 @@
-\documentclass[journal]{content/IEEEtran}
+\documentclass[journal,a4paper]{content/IEEEtran}
 %%%%%%%%% for at skrive på dansk %%%%%%%%%
 \usepackage{amsmath}
 \usepackage{amssymb}
