Tilføjet noget til litteraturlisten

--- a/IEEE rapport/IEEE master/content/introduction.tex
+++ b/IEEE rapport/IEEE master/content/introduction.tex
@@ -9,12 +9,23 @@
 
 
 \section{Overvejelser}
-Her kan der skrives lidt omkring overvejelserne.
+Her kan der skrives lidt omkring overvejelserne. 
+
+
+Det kan jo være vi bruger både\citep{operating_systems_concepts_ed9}
+og den ældre version \citep[Side. 223]{operating_systems_concepts_ed8}
+
+
+eller noget vhdl \citep{pedroni_VHDL}
+
+
+eller noget REG\citep{reg_modern_control_systems}
+
 
 \subsection{Dette er et eksempel på subsection}
-Subsection med tekst og reference til litteratur \citep{reflist}. \\
+Subsection med tekst og reference til litteratur
 
-Jeg prøver også lige lave en henvisning til appendix \ref{app:beskrivelse_af_systemet}
+Jeg prøver også lige lave en henvisning til appendix \ref{app:beskrivelse_af_systemet_ed9}
 
 \subsubsection{Subsubsection Heading Here}
 Subsubsection text here.
