--- a/IEEE rapport/IEEE master/content/litteraturliste.bib
+++ b/IEEE rapport/IEEE master/content/litteraturliste.bib
@@ -1,4 +1,25 @@
-@Book{reflist,author     = {surname, initials and surname, initials and surname, initials,},
+@Book{reflist,author     = {surname, initials and surname, initials and surname, initials},
 year        ={2013},
 title          ={title of the book},
 edition    ={22},publisher = {Addison-Wesley},address={hollywood},}
+
+
+@Book{operating_systems_concepts_ed9,author     = {Silberschatz, A. and Galvin, P. B. and Gagne, G.},
+year        ={2012},
+title          ={Operating Systems Concepts},
+edition    ={9},publisher = {Wiley},address={},}
+
+@Book{operating_systems_concepts_ed8,author     = {Silberschatz, A. and Galvin, P. B. and Gagne, G.},
+year        ={2008},
+title          ={Operating Systems Concepts},
+edition    ={8},publisher = {Wiley},address={},}
+
+@Book{pedroni_VHDL,author     = {Pedroni, V. A.},
+year        ={2010},
+title          ={Circuit Design and Simulation with VHDL},
+edition    ={2},publisher = {Massachusetts Institute of Technology ER EN SMULE ISUKKER PÅ DENNE}, address={London, England},}
+
+@Book{reg_modern_control_systems,author     = {Dorf, R. C. and Bishop, R. H.},
+year        ={2010},
+title          ={Modern Control Systems},
+edition    ={12},publisher = {Pearson Education},address={New Jersey},}
