Blot tilføjet en kilde til litteraturlisten.

--- a/IEEE rapport/IEEE master/content/litteraturliste.bib
+++ b/IEEE rapport/IEEE master/content/litteraturliste.bib
@@ -23,3 +23,8 @@ edition    ={2},publisher = {Massachusetts Institute of Technology ER EN SMULE 
 year        ={2010},
 title          ={Modern Control Systems},
 edition    ={12},publisher = {Pearson Education},address={New Jersey},}
+
+@Book{fundamentals_of_physics,author     = {Halliday, D. and Resnick, R. and Walker, J.},
+year        ={2011},
+title          ={Fundamentals of Physics Extended},
+edition    ={9},publisher = {John Wiley & Sons, Inc},address={Cleveland},}
