--- a/IEEE rapport/IEEE master/IEEE_master.tex
+++ b/IEEE rapport/IEEE master/IEEE_master.tex
@@ -13,8 +13,11 @@
 
 
 %%%%%%%%%%%%%%%% Rapporttens appendices %%%%%%%%%%%%%%%%
+\newpage
+\newpage
 \appendices \todo[inline,color=red! 100]{Der skal lige laves så appendix står på engelsk}
 \input{./content/appendix_1}
+\input{./content/appendix_2}
 %%%%%%%%%%%%%%%% Rapporttens litteraturliste %%%%%%%%%%%%%%%%
 \bibliography{./content/litteraturliste}
 \end{document}
