--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -26,6 +26,7 @@
 \usepackage{footnote}
 \setcounter{tocdepth}{3} % Antal lag i indholdsfortegenlse.
 \setcounter{secnumdepth}{5} % Antal lag i sektioner.
+\usepackage[toc,page]{appendix} % appendices
 
 %%%%%%% FIGURES %%%%%%%
 \usetikzlibrary{positioning} % in the preamble
