--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -32,7 +32,11 @@
 %%%%%%%%%%%% Litteratur %%%%%%%%%%%%
 \include{./content/litteratur}
 %%%%%%%%%%%% Appendix %%%%%%%%%%%%
-\include{./content/appendix}
+\appendices
+\include{./content/app_DCmotor}
+\include{./content/app_panandtiltparameter}
+
+
 %%%%%%%%%%%% Bilag %%%%%%%%%%%%
 \include{./content/bilag}
 
