--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -28,6 +28,9 @@
 \setcounter{secnumdepth}{5} % Antal lag i sektioner.
 \usepackage[toc,page]{appendix} % appendices
 
+\usepackage{chngcntr}
+\counterwithin{figure}{section}
+
 %%%%%%% FIGURES %%%%%%%
 \usetikzlibrary{positioning} % in the preamble
 \usetikzlibrary{decorations.pathreplacing}
