--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -40,9 +40,11 @@
 \usepackage{siunitx}
 \usepackage{tikz}
 \usetikzlibrary{shapes,arrows,chains, scopes}
-\usepackage{pgfplots}               
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.8} %For at dokumentet kompilerer ens på alle maskiner.               
 \usepackage[europeanvoltages, europeancurrents, europeanresistors, americaninductors, smartlabels]{circuitikz}
 \usepackage{graphicx} % bruges til MATLAB figurer samt formatet .eps
+\usepackage{epstopdf} % bruges til automatisk konvertering af .eps-filer til pdf; Ellers kan man ikke kompilere med pdfLaTeX.
 \usepackage{mathtools}
 \usetikzlibrary{arrows,automata} % for drawing state machines
 
