--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -19,6 +19,7 @@ Med ligning \ref{eq:VEMF} kan ligning \ref{eq:Vm_transient0} omskrives til ligni
  \end{equation}
 
 \subsection{Eksperiment 1}
+\label{ss:eksperiment1}
 \subsubsection{Formål}
 Bestemmelse af motorens ækvivalente resistans, $R_m$.
 \subsubsection{Teori}
@@ -72,8 +73,64 @@ Motorens ækvivalente resistans, $R_m$ er vha. sammenhørende målinger af strø
 for en rotationslåst motor, ved effektafsættelser på 48 mW og højere,
 blevet bestemt til 5,21 $\Omega$.\todo{Flere decimaler?}
 \subsection{Eksperiment 2}
-\subsubsection{Fremgangsmåde og forsøgsopstilling}
+\subsubsection{Formål}
+Bestemmelse af motorens ækvivalente induktans, $L_m$.
+Der er benyttet to forskellige metoder til bestemmelsen af induktansen.
+Metode 1 tager udgangspunkt i tidskonstanten for et RL-kredsløb,
+mens metode 2 tager udgangspunkt i faseforskellen mellem forskellige komplekse impedanser i serie.
+\subsubsection{Teori}
+\paragraph{Metode 1}
+Forhindres motoren i at rotere, vil vinkelhastigheden som beskrevet i afsnit \ref{ss:eksperiment1} være nul.
+Ved denne metode er vi interesseret i systemets transientrespons, hvor strømmen $i_m$ ikke er konstant.
+Forbindes en modstand $R_s$ i serie med DC-motoren som vist på fig. %\ref{fig:e2_rl1}
+\todo[inline]{Indsæt kredsløbsdiagram med Rs}
+vil der være tale om et RL-kredsløb, med en tidskonstant $\tau$ givet ved ligning \ref{eq:rltimeconstant}.
+Transientresponsen for alle strømme og spændingsfald i kredsløbet har denne tidskonstant.
+\todo[inline]{Indsæt kilde eller forklaring til RL-tidskonstant.}
+\begin{equation}
+	\tau=\frac{L_m}{R_m+R_s}
+	\label{eq:rltimeconstant} 
+ \end{equation}
+Tidskonstanten er et mål for tiden det tager systemet at opnå ca. 63,2 \% af slutværdien.\todo{D\&B-kilde}
+For en (eksponentielt) aftagende kurve med tidskonstanten $\tau$ kan tidskonstanten aflæses som
+tidsforskellen mellem to niveauer V0 og V1, hvor V1 er ca. 36,8 \% af V0.
+
+Ved omskrivning af ligning \ref{eq:rltimeconstant} kan induktansen altså bestemmes vha. ligning \ref{eq:induktans0}.
+\begin{equation}
+	L_m=\tau\cdot(R_m+R_s)
+	\label{eq:induktans0} 
+ \end{equation}
+\paragraph{Metode 2}
+...
+\subsubsection{Fremgangsmåde}
+\paragraph{Metode 1}
+En modstand $R_s$ måles efter med et multimeter og fobindes i serie med DC-motoren
+som på figur %\ref{fig:e2_rl1}
+.
+Kredsløbet bestående af DC-motoren og $R_s$ påføres en kendt spænding.
+Strømmen gennem kredsløbet afbrydes på strømforsyningen og spændingsfaldet
+over $R_s$ måles med et oscilloskop.
+Dataene eksporteres og tidskonstanten bestemmes herudfra.
+
+Det anvendte multimeter er af typen TTi 1604,
+og oscilloskopet er af typen \todo{Oscilloskop?}.
+
+\paragraph{Metode 2}
+\subsubsection{Måleresultater}
+\paragraph{Metode 1}
+Seriemodstanden $R_s$ er blevet målt til 61,77 $\Omega$.
+På figur \ref{fig:induktans0} er transientresponsen for spændingsfaldet over $R_s$ indtegnet
+sammen med de to spændingsniveauer, hvorudfra tidskonstanten bestemmes.
+\begin{figure}[th!]
+	\centering
+	\includegraphics[width=1\textwidth]{./graphics/induktans0.eps}
+	\caption[...]{...}
+	\label{fig:induktans0}
+\end{figure}
+
+\paragraph{Metode 2}
 \subsubsection{Databehandling}
+\subsubsection{Diskussion}
 \subsubsection{Konklusion}
 
 
