Tilføjelse af sektion.

--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -1,1 +1,15 @@
 \section{Problemformulering}
+Design en kontroller for et Pan and Tilt system. Systemet skal kunne tracke bold i bevægelse i rummet.
+Luftmodstand negligeres således bolden fylder en parabel.\\
+
+
+
+
+\begin{figure}[!th]
+\centering
+\begin{tikzpicture}[scale=0.5]
+\include*{./graphics/pan_and_tilt_system}
+\end{tikzpicture}
+\caption[Skematisk tegning af Pan and Tilt]{Det blå punkt er det logiske center af systemet og det grønne punkt basen for systemet.}
+\label{fig:}
+\end{figure}
