--- a/Rapport/graphics/pan_and_tilt_system.tex
+++ b/Rapport/graphics/pan_and_tilt_system.tex
@@ -1,4 +1,4 @@
-\begin{tikzpicture}[scale=1]
+
 
 \draw[fill = gray] (0.5,1)--(6.5,1)--(6.5,7)--(0.5,7)--(0.5,1);
 \draw[fill = white] (1,1.5)--(6,1.5)--(6,6.5)--(1,6.5)--(1,1.5);
@@ -16,11 +16,10 @@
 \draw[dashed, red] (3.5,-3)--(3.5,7.5);
 
 \draw[fill = blue] (3.5,4) circle (3pt);
-\draw[fill = blue] (7.5,6) circle (3pt);
-\draw (11.25,6)node{Logical origin of the Pan and Tilt system};
+%\draw[fill = blue] (7.5,6) circle (3pt);
+%\draw (11.25,6)node{Logical origin of the Pan and Tilt system};
 
 \draw[fill = green] (3.5,-3) circle (3pt);
-\draw[fill = green] (7.5,5.5) circle (3pt);
-\draw (9.28,5.5)node{Pan and Tilt base};
+%\draw[fill = green] (7.5,5.5) circle (3pt);
+%\draw (9.28,5.5)node{Pan and Tilt base};
 
-\end{tikzpicture}
