--- a/Rapport/content/forord.tex
+++ b/Rapport/content/forord.tex
@@ -1,3 +1,9 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 \section{Forord}
+\begin{figure}[th!]
+\centering
+\includegraphics[width=0.4\textwidth]{./graphics/forside}
+\caption[tekst i indholdsfortegnelsen]{figurtekst}
+\label{fig:}
+\end{figure}
