--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -41,7 +41,7 @@
 \usepackage{tikz}
 \usetikzlibrary{shapes,arrows,chains, scopes}
 \usepackage{pgfplots}
-\pgfplotsset{compat=1.8} %For at dokumentet kompilerer ens på alle maskiner.               
+%\pgfplotsset{compat=1.8} %For at dokumentet kompilerer ens pÃ¥ alle maskiner.               
 \usepackage[europeanvoltages, europeancurrents, europeanresistors, americaninductors, smartlabels]{circuitikz}
 \usepackage{graphicx} % bruges til MATLAB figurer samt formatet .eps
 \usepackage{epstopdf} % bruges til automatisk konvertering af .eps-filer til pdf; Ellers kan man ikke kompilere med pdfLaTeX.
