todo tip feedback.

--- a/Rapport/content/templates.tex
+++ b/Rapport/content/templates.tex
@@ -21,7 +21,7 @@
 %\todo[inline,color=red! 100]{grammatik}
 %\todo[inline,color=green! 100]{hjælp, henvisning til person}
 %\todo[inline,color=yellow! 100]{person, mangler ydereligere oplysninger}
-%\todo[inline,color=blue! 50]{person, vil gerne have feedback}
+%\todo[inline,color=blue! 50]{feedback}
 %\todo[inline,color=gray! 100]{diverse}
 
 %%%%%%%%%%%% LIGNINGER %%%%%%%%%%%%
