Lidt feedback på tabel.

--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -58,7 +58,8 @@ Værdierne noteres, og forsøget gentages ved andre spændinger.
 
 De anvendte multimetre er af typen TTi 1604.
 \subsubsection{Måleresultater}
-I tabel \ref{tb:resistans} findes målingerne af strøm og spænding.
+I tabel \ref{tb:resistans} findes målingerne af strøm og spænding.\todo[inline,color=blue! 50]{Mikael, jeg synes de vil se bedre ud i tabellen, hvis der 
+var et mindre decimal i de ni første, ${V_{m}}$.}
 \begin{figure}[th!]
 	\centering
 	\input{content/tb_resistans.tex}
